--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
                     <div class="recept-kategorie">Grilování</div>
                     <div class="recept-komentare">5 komentářů</div>
                 </div>
-                <h2 class="recept-nazev">Domácí hovězí burger</h2>
+                <h2 class="recept-nazev burger">Domácí hovězí burger</h2>
             </div>
 
+            <div class="jedlo">
             <div class="sloupec">
 
                 <div class="recept recept2">
@@ -62,7 +63,7 @@
             </div>
 
         </div>
-
+    </div>
 
         <div class="paticka">
             <p>Foto &copy; <a href="https://www.flickr.com/photos/68711844@N07/">Michael Stern</a> (licence <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC BY-SA 2.0</a>)</p>
