--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
             <div class="hlavni-recept">
                 <div class="recept-meta">
-                    <div class="recept-kategorie">Grilování</div>
+                    <div class="recept-kategorie">Grilování
+                                 </div>
                     <div class="recept-komentare">5 komentářů</div>
                 </div>
-                <h2 class="recept-nazev burger">Domácí hovězí burger</h2>
+                <h2 class="recept-nazev">Domácí hovězí burger</h2>
             </div>
 
-            <div class="jedlo">
-            <div class="sloupec">
+                        <div class="sloupec">
 
                 <div class="recept recept2">
                     <div class="recept-meta">
@@ -62,7 +62,7 @@
 
             </div>
 
-        </div>
+        
     </div>
 
         <div class="paticka">
